freegeek-build-utils (1.2.36) freegeek-test; urgency=low

  * Implement ordering logic when pulling from basicchecks.yml, to work
    around unreliability of Ruby between versions, and switch the order
    of Sound and CPU tests as they requested (Closes: #27469)

 -- Ryan Niebur <ryan@debian.org>  Fri, 23 Mar 2012 12:51:54 -0700

freegeek-build-utils (1.2.35) freegeek-test; urgency=low

  * add support for defaulting values from past printme's

 -- Ryan Niebur <ryan@debian.org>  Sat, 03 Mar 2012 00:40:24 -0800

freegeek-build-utils (1.2.34) freegeek-test; urgency=low

  * add ALLOW_ROOT=true to force allowing root user
  * add support for conditional questions, based on printme input
    for specific areas (Closes #26673, but waiting for more questions)
  * use speaker-test instead of aplay so that it actually tests the
    channels separate, thanks to Max for noticing (Closes: #26671)

 -- Ryan Niebur <ryan@debian.org>  Sat, 03 Mar 2012 00:19:18 -0800

freegeek-build-utils (1.2.33) freegeek-test; urgency=low

  * do not use dmidecode on sparc

 -- Ryan Niebur <ryan@debian.org>  Wed, 28 Dec 2011 15:33:53 -0800

freegeek-build-utils (1.2.32) freegeek-test; urgency=low

  * split to separate source package

 -- Ryan Niebur <ryan@debian.org>  Wed, 30 Nov 2011 16:16:10 -0800

freegeek-extras (1.2.31) freegeek-test; urgency=low

  * don't fail to install if cups isn't installed
  * printme: use default configuration settings if there is no
    /etc/printme.yml

 -- Ryan Niebur <ryan@debian.org>  Sat, 19 Nov 2011 16:38:05 -0800

freegeek-extras (1.2.29) freegeek-test; urgency=low

  * send dmidecode Maximum Capacity for memory as :max_capacity

 -- Ryan Niebur <ryan@debian.org>  Tue, 06 Sep 2011 23:51:42 -0700

freegeek-extras (1.2.28) freegeek-test; urgency=low

  * Rebuild fix

 -- Ryan Niebur <ryan@debian.org>  Wed, 27 Jul 2011 11:11:10 -0700

freegeek-extras (1.2.27) freegeek-test; urgency=low

  * Remove the Linux specific Google search box, Google doesn't have