@@ -2,7 +2,8 @@ freegeek-build-utils (1.2.36) freegeek-test; urgency=low
 
   * Implement ordering logic when pulling from basicchecks.yml, to work
     around unreliability of Ruby between versions, and switch the order
-    of Sound and CPU tests as they requested (Closes: #27469)
+    of Sound and CPU tests, as well as video and resolution tests,
+    as they requested (Closes: #27469)
 
  -- Ryan Niebur <ryan@debian.org>  Fri, 23 Mar 2012 12:51:54 -0700
 
